--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@ body{
     background-image: url(bg1.jpg);
     background-position: center;
     background-size: cover;
-}
+    
+}   
 .parent{
     display: flex;
     justify-content: center;
@@ -65,11 +66,12 @@ h4{
 }
 .check{
     display: flex;
-    padding: 1em;
+    padding: 1.5em;
     text-align: left;
 }
-.check input{
+.rem{
     flex: 1;
+    margin-left: 2px;
 }
 .check a{
     flex: 3;
