--- a/style.css
+++ b/style.css
@@ -19,7 +19,8 @@ body{
     align-items: center;
     width: 100vw;
     height: 100vh;
-    opacity: 0.8;    
+    opacity: 0.8;  
+    font-size: 3vw;  
 
 }
 
